--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -2,6 +2,10 @@ cloud_id                 = "b1g6t5ppfu2dge7g00hi"
 folder_id                = "b1gbnpgtpm9747lkkr99"
 zone                     = "ru-central1-a"
 image_id                 = "fd8u5ouittd1osr7csqu"
+app_disk_image           = "fd8ldt9kbu2vlisc75dk"
+db_disk_image            = "fd8vuf16rslseou1e3tu"
 public_key_path          = "~/.ssh/id_rsa.yc.pub"
+private_key_path         = "~/.ssh/id_rsa.yc"
 subnet_id                = "e9bog90sabqbcp2giu9q"
-service_account_key_file = "key.json"
+service_account_key_file = "/home/stas/yandex-cloud/keys/terraform/key.json"
+instance_count           = 1
