--- a/ansible/reddit_app.yml
+++ b/ansible/reddit_app.yml
@@ -3,7 +3,7 @@
   hosts: all
   vars:
     mongo_bind_ip: 0.0.0.0
-    db_host: 51.250.1.85
+    db_host: 51.250.13.216
   tasks:
     - name: Change mongo config file
       become: true
@@ -22,17 +22,30 @@
       tags: app-tag
       notify: reload puma
 
+    - name: enable puma
+      become: true
+      systemd: name=puma enabled=yes
+      tags: app-tag
+
     - name: Add config for DB connection
       template:
         src: templates/db_config.j2
         dest: /home/ubuntu/db_config
       tags: app-tag
 
-    - name: Enable puma
-      become: true
-      systemd: name=puma enabled=yes
-      tags: app-tag
+    - name: Fetch the latest version of application code
+      git:
+        repo: 'https://github.com/express42/reddit.git'
+        dest: /home/ubuntu/reddit
+        version: monolith
+      tags: deploy-tag
+      notify: reload puma
 
+    - name: Bundle install
+      bundler:
+        state: present
+        chdir: /home/ubuntu/reddit
+      tags: deploy-tag
   handlers:
     - name: restart mongod
       become: true
