--- a/ansible/reddit_app_multiple_plays.yml
+++ b/ansible/reddit_app_multiple_plays.yml
@@ -41,7 +41,10 @@
       systemd: name=puma enabled=yes
   handlers:
     - name: reload puma
-      systemd: name=puma state=restarted
+      systemd:
+        state: reloaded
+        daemon_reload: yes
+        name: puma
 
 - name: Deploy App
   hosts: app
@@ -61,4 +64,7 @@
   handlers:
   - name: restart puma
     become: true
-    systemd: name=puma state=restarted
+    systemd:
+      state: restarted
+      daemon_reload: yes
+      name: puma
