--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,5 +1,5 @@
 {
-    "service_account_key_file": "",
+    "service_account_key_file": "packer/key.json",
     "folder_id": "345",
     "source_image_family": "556",
     "disk_size_gb": "10",
